# 3rd_Gen_FHE_ACC

./: .gitignore  README.md
FHE_ACC_runtime/: CMakeLists.txt
FHE_ACC_runtime/apps/: bootstrap_fpga_128_ap.cpp  bootstrap_fpga_192.cpp  bootstrap_fpga_256.cpp  bootstrap_fpga_medium.cpp  fhe_wo_fpga.cpp  homo_expand_fpga.cpp  homo_expand_tree_sel_fpga.cpp  ocl_read_fpga.cpp  rlwe_expand_fpga.cpp  rlwe_subs_fpga.cpp  stand_alone_bootstrap_fpga.cpp  stand_alone_bootstrap_init_fpga.cpp  stand_alone_rlwe_mult_rgsw.cpp  stand_alone_rlwesubs_dual_fpga.cpp  test.cpp
FHE_ACC_runtime/include/: LWE.h  RLWE.h  RNG.h  app.h  myfpga.h  nbt.h  params.h  test.h
FHE_ACC_runtime/src/: LWE.cpp  RLWE.cpp  RNG.cpp  app.cpp  myfpga.cpp  nbt.cpp  params.cpp  test.cpp
cl_fhe_acc/: README.md
cl_fhe_acc/design/src/: CT_butterfly.sv  DMA_AXI_to_input_poly_FIFO.sv  DMA_AXI_to_output_poly_FIFO.sv  GS_butterfly.sv  NTT_leading_stage.sv  NTT_stage.sv  NTT_top.sv  RLWE_input_FIFO.sv  RLWE_output_FIFO.sv  ROB.sv  ROU_buffer.sv  acc_top.sv  accumulator.sv  axil_bar1_slave.sv  axil_ocl_slave.sv  barrel_shifter.sv  cl_dma_pcis_slv.sv  cl_ila.sv  common.vh  compute_chain_top.sv  fhe_acc_top.sv  fhe_acc_top_debug.sv  iNTT_module.sv  iROU_buffer.sv  interface_defines.sv  key_load_module.sv  mod_add.sv  mod_mult.sv  mod_sub.sv  myFIFO_NTT.sv  myFIFO_dummy.sv  myFIFO_dummy_global.sv  myFIFO_global_poly_input.sv  myFIFO_global_poly_output.sv  myFIFO_iNTT.sv  myFIFO_key_loading.sv  myFIFO_subs.sv  pipeline.sv  poly_mult_RLWE.sv  poly_ram_block.sv  (+2 more)
cl_fhe_acc/design/src/my_dma_axi_xbar/: my_dma_axi_xbar.bd  my_dma_axi_xbar.bxml  my_dma_axi_xbar.tcl
cl_fhe_acc/design/src_aws_top/: cl_aws_top_defines.vh  cl_dma_poly_inout_test.sv  cl_dma_poly_test.sv  cl_fhe_acc_top.sv  cl_fhe_acc_top_async_ddr.sv  cl_fhe_acc_top_debug.sv  cl_ocl_key_load_test.sv
cl_fhe_acc/software/runtime/: Makefile  README.txt  fhe_acc.c  fhe_acc.h  test_fhe_acc_bootstrap.c  test_fhe_acc_bootstrap_init.c  test_fhe_acc_combined.c  test_fhe_acc_ocl_read.c  test_fhe_acc_rlwe_mult_rgsw.c  test_fhe_acc_rlwesubs.c
cl_fhe_acc/verif/scripts/: Makefile  Makefile.vivado  top.vivado.f  waves.tcl
cl_fhe_acc/verif/tests/aws_tests/: test_dma_poly_read.sv  test_dma_poly_rw.sv  test_dma_poly_write.sv  test_fhe_acc_bootstrap_init_fast.sv  (+6 more)
(+87 files in other folders)
